[project]
name = "audio-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "numpy>=2.2.0",
    "yt-dlp>=2026.3.3",
    "openai>=1.0.0",
    "requests>=2.32.0",
    "soundfile>=0.13.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "huggingface-hub>=1.10.0",
    "omnivoice>=0.1.3",
    "torchvision>=0.26.0",
]
